--- a/GGS.html
+++ b/GGS.html
@@ -1,6 +1,6 @@
 <h1>GGS Is A sponsors Banking Company</h1>
 
-
+<p> </p>
 
 
 
@@ -34,3 +34,7 @@
 
 
 <p>GGS is funded thanks to its sponsors!</p>
+
+<p>current company value: $728,000</p>
+
+<p>Web BY Jaden</p>
