--- a/GGS.html
+++ b/GGS.html
@@ -1,8 +1,6 @@
-<h1>GGS Is A sponsors Banking Company</h1>
+<h1>GGS Is a Banking Company</h1>
 
-<p> </p>
-
-
+<p> Email Jaden@jvlshop.com email I want to create an account and you receive response within seconds </p>
 
 
 
@@ -33,7 +31,8 @@
 
 
 
-<p>GGS is funded thanks to its sponsors!</p>
 
-<p>current company value: $728,000</p>
+
+
+
 
